tests/.nts/error/links_pin_not_number1.nts
.chipsets:
input  in
output out

.links:
in:a out:1